plugins {
    id 'java'
    id 'com.diffplug.spotless' version '6.25.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ['--enable-preview']
}

tasks.withType(Test).configureEach {
    jvmArgs += ['--enable-preview']
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

spotless {
    java {
        eclipse('4.30').configFile(rootProject.file('java21/.eclipse-formatter.xml'))
        importOrder()
        trimTrailingWhitespace()
        endWithNewline()
        targetExclude('**/build/**')
    }
}

tasks.named('check') {
    dependsOn tasks.named('spotlessCheck')
}
